Added page playRoute, still working on

--- a/muensterdiscovery/src/i18n/de.json
+++ b/muensterdiscovery/src/i18n/de.json
@@ -21,6 +21,7 @@
     "routeselection.pois": "POIs",
     "routeselection.close": "Schließen",
     "routeselection.overview": "Routenübersicht",
+    "routeselection.start": "Route starten",
 
     "imprint.title": "Impressum",
     "imprint.content": "Dieses Projekt ist ein Studienprojekt im Rahmen des Masterstudiengangs Geoinformatics and Spatial Data Science der Universität Münster. Quellcode und Dokumentation sind auf GitHub verfügbar:",
