--- a/muensterdiscovery/src/i18n/ru.json
+++ b/muensterdiscovery/src/i18n/ru.json
@@ -76,9 +76,23 @@
     "start.slide3_content": "Содержание слайда 3",
     "start.welcome_message": "Добро пожаловать обратно, {name}!",
     "start.discover_message": "Откройте для себя самые интересные места и впечатления в Мюнстере.",
-    "start.tile": "Плитка {number}",
-    "start.add_content": "Добавьте свой контент здесь",
+    "start.tile.1": "Просмотр маршрутов",
+    "start.tile.1.context": "Наши тщательно подобранные маршруты приведут вас к самым захватывающим местам Мюнстера!",
+    "start.tile.2": "Режим Открытый мир",
+    "start.tile.2.context": "Исследуйте Мюнстер самостоятельно и найдите скрытые сокровища в городе!",
+    "start.tile.3": "Уже видели это..?",
+    "start.tile.3.context": "Сравните свои открытия с другими в рейтинге!",
+    "start.tile.4": "Профиль",
+    "start.tile.4.context": "Проверьте свои достижения и настройте свои данные!",
     "footer.all_rights_reserved": "Все права защищены.",
 
-    "leaderboard.you": "ВЫ"
+    "leaderboard.you": "ВЫ",
+
+    "chat.example1": "Какие достижения я уже завершил?",
+    "chat.example2": "Где найти таблицу лидеров?",
+    "chat.example3": "У меня 45мин времени. Какой маршрут могу пройти?",
+    "chat.quickstart": "Быстрый старт:",
+
+    "chat.placeholder": "Введите сообщение..."
+
 }
