--- a/muensterdiscovery/src/i18n/pl.json
+++ b/muensterdiscovery/src/i18n/pl.json
@@ -69,8 +69,13 @@
     "login.error": "Logowanie nie powiodło się. Sprawdź swoje dane.",
     "login.success": "Pomyślnie zalogowano!",
 
-    "start.slide1_title": "Slajd 1",
-    "start.slide1_content": "Zawartość slajdu 1",
+    "start.slide1_title.happy": "Ridey jest szczęśliwy!",
+    "start.slide1_content.happy": "Zawartość slajdu 1",
+    "start.slide1_title.sad": "Ridey jest smutny",
+    "start.slide1_content.sad": "Zawartość slajdu 1",
+    "start.slide1_title.neutral": "Jak się dziś czujesz?",
+    "start.slide1_content.neutral": "Zawartość slajdu 1",
+
     "start.slide2_title": "Slajd 2",
     "start.slide2_content": "Zawartość slajdu 2",
     "start.slide3_title": "Slajd 3",
