--- a/muensterdiscovery/src/i18n/sa.json
+++ b/muensterdiscovery/src/i18n/sa.json
@@ -69,8 +69,13 @@
     "login.error": "فشل تسجيل الدخول. يرجى التحقق من بياناتك.",
     "login.success": "تم تسجيل الدخول بنجاح!",
 
-    "start.slide1_title": "شريحة 1",
-    "start.slide1_content": "محتوى الشريحة 1",
+    "start.slide1_title.happy": "Ridey سعيد!",
+    "start.slide1_content.happy": "لقد وصلت إلى جميع أهدافك اليوم. حتى الغد!",
+    "start.slide1_title.sad": "Ridey مُحبط ya kelb",
+    "start.slide1_content.sad": "لم تصل إلى أي هدف اليوم. حاول مرة أخرى غداً!",
+    "start.slide1_title.neutral": "كيف تشعر اليوم؟",
+    "start.slide1_content.neutral": "لنكتشف مِنستر معاً!",
+
     "start.slide2_title": "شريحة 2",
     "start.slide2_content": "محتوى الشريحة 2",
     "start.slide3_title": "شريحة 3",
